--- a/lib/carbon-route/carbon-location.html
+++ b/lib/carbon-route/carbon-location.html
@@ -20,7 +20,7 @@ occur, `carbon-location` produces and updates an object called `route`. This
 `route` object is suitable for passing into a `carbon-route`, and other similar
 elements.
 
-An example of a route object that describes the URL
+An example of the public API of a route object that describes the URL
 `https://elements.polymer-project.org/elements/carbon-route-converter?foo=bar&baz=qux`:
 
     {
@@ -148,11 +148,14 @@ Example:
         }
       },
 
-      __computeRoutePath: function(path, hash, useHashAsPath) {
-        return useHashAsPath ? hash : path;
+      __computeRoutePath: function() {
+        return this.useHashAsPath ? this.__hash : this.__path;
       },
 
       __onPathChanged: function(event) {
+        if (!this._readied) {
+          return;
+        }
         var path = event.detail.value;
 
         if (this.useHashAsPath) {
