--- a/lib/carbon-route/carbon-route-converter.html
+++ b/lib/carbon-route/carbon-route-converter.html
@@ -20,17 +20,25 @@ creating bespoke routing solutions from scratch. To simply include routing in
 an app, please refer to [carbon-location](https://github.com/PolymerElements/carbon-route/blob/master/carbon-location.html)
 and [carbon-route](https://github.com/PolymerElements/carbon-route/blob/master/carbon-route.html).
 
-An example of a route element that describes
-`https://elements.polymer-project.org/elements/carbon-route-converter?foo=bar&baz=qux`:
+An example of a route object that describes
+`https://elements.polymer-project.org/elements/carbon-route-converter?foo=bar&baz=qux`
+and should be passed to other `carbon-route` elements:
 
     {
       prefix: '',
       path: '/elements/carbon-route-converter',
-      queryParams: {
+      __queryParams: {
         foo: 'bar',
         baz: 'qux'
       }
     }
+
+`__queryParams` is private to discourage directly data-binding to it. This is so
+that routing elements like `carbon-route` can intermediate changes to the query
+params and choose whether to propagate them upstream or not. `carbon-route` for
+example will not propagate changes to its `queryParams` property if it is not
+currently active. A public queryParams object will also be produced in which you
+should perform data-binding operations.
 
 Example Usage:
 
@@ -75,7 +83,6 @@ turn is consumed by the `carbon-route`.
        */
       route: {
         type: Object,
-        value: null,
         notify: true
       },
 
@@ -87,7 +94,6 @@ turn is consumed by the `carbon-route`.
        */
       queryParams: {
         type: Object,
-        value: null,
         notify: true
       },
 
@@ -99,7 +105,6 @@ turn is consumed by the `carbon-route`.
       path: {
         type: String,
         notify: true,
-        value: ''
       }
     },
 
@@ -121,11 +126,16 @@ turn is consumed by the `carbon-route`.
      * @param  {Object} queryParams A set of key/value pairs that are
      * universally accessible to branches of the route tree.
      */
-    _locationChanged: function(path, queryParams) {
+    _locationChanged: function() {
+      if (this.route &&
+          this.route.path === this.path &&
+          this.queryParams === this.route.__queryParams) {
+        return;
+      }
       this.route = {
         prefix: '',
-        path: path,
-        __queryParams: queryParams
+        path: this.path,
+        __queryParams: this.queryParams
       };
     },
 
@@ -136,12 +146,12 @@ turn is consumed by the `carbon-route`.
      * path.
      * @param  {!string} path The serialized path through the route tree.
      */
-    _routeChanged: function(prefix, path) {
+    _routeChanged: function() {
       if (!this.route) {
         return;
       }
 
-      this.path = prefix + path;
+      this.path = this.route.prefix + this.route.path;
     },
 
     /**
