--- a/lib/carbon-route/demo/index.html
+++ b/lib/carbon-route/demo/index.html
@@ -80,7 +80,7 @@ http://polymer.github.io/PATENTS.txt
     carbon-route elements to consume. Since this demo needs to run without
     server cooperation (e.g. with polyserve, in the elements catalog, etc) we'll
     use the hash portion of the URL for our route paths. -->
-    <carbon-location route={{route}} use-hash-as-path></carbon-location>
+    <carbon-location route="{{route}}" use-hash-as-path></carbon-location>
 
     <!-- carbon-routes parse route paths based on the their `pattern`.
     Parameters are extracted into the `data` object. The rest of the path that
@@ -146,25 +146,30 @@ http://polymer.github.io/PATENTS.txt
 
           videos: {
             type: Array,
-            value: []
+            value: function() {
+              return [];
+            }
           },
 
           data: {
             type: Object,
-            value: {
-              page: '/search/'
+            value: function() {
+              return {
+                page: '/search/'
+              };
             }
           }
         },
 
-        ready: function() {
-          // TODO: Remove this async https://github.com/PolymerElements/carbon-route/issues/44
-          this.async(function() {
-            // If we do not have an initial URL, we redirect to /search
-            if (!this.route.path) {
-              this.set('route.path', '/search/');
-            }
-          },1);
+        observers: [
+          '_onRoutePathChanged(route.path)'
+        ],
+
+        _onRoutePathChanged: function(path) {
+          // If we do not have an initial URL, we redirect to /search
+          if (!path) {
+            this.set('route.path', '/search/');
+          }
         },
 
         _videoDataChanged: function(data) {
