--- a/lib/carbon-route/test/app-example-1.html
+++ b/lib/carbon-route/test/app-example-1.html
@@ -15,25 +15,29 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <template>
     <carbon-location route='{{route}}'>
     </carbon-location>
-    <carbon-route route='{{route}}' pattern='/:page' data='{{data}}'>
+    <carbon-route id="page" route='{{route}}' pattern='/:page' data='{{data}}'>
     </carbon-route>
-    <carbon-route route='{{route}}' pattern='/user' tail='{{userRoute}}'>
+    <carbon-route id="user" route='{{route}}' pattern='/user' tail='{{userRoute}}'>
     </carbon-route>
-    <carbon-route route='{{userRoute}}' pattern='/:page' data='{{userData}}' query-params="{{userQueryParams}}">
+    <carbon-route id="tail" route='{{userRoute}}' pattern='/:page' data='{{userData}}' query-params="{{userQueryParams}}">
     </carbon-route>
   </template>
   <script>
     Polymer({
       is: 'app-example-1',
-      properties: {
-        path: {
-
-        },
-        data: {
-
-        },
-        userData: {
-
+      observers: [
+        'pageChanged(data.page)',
+        'userPathChanged(userRoute.path)',
+      ],
+      pageChanged: function(page) {
+        if (page === 'redirectToUser') {
+          this.set('data.page', 'user');
+        }
+      },
+      userPathChanged: function(path) {
+        // Redirect from /user/ and /user to /user/view
+        if (path === '/' || path === '') {
+          this.set('userRoute.path', '/view');
         }
       }
     })
