--- a/lib/carbon-route/test/carbon-location.html
+++ b/lib/carbon-route/test/carbon-location.html
@@ -46,14 +46,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       Polymer.Base.fire('location-changed', {}, { node: window });
     }
 
-    // iron-location listens for the click, if it matches the url space
-    // configuration, then it prevents default.
-    function setLocationClick(url) {
-      var clickableLink = fixture('ClickableLink');
-      clickableLink.setAttribute('href', url);
-      MockInteractions.tap(clickableLink);
-    }
-
     function assign(a, b) {
       if (Object.assign) {
         return Object.assign.apply(Object, arguments);
@@ -67,148 +59,109 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     }
 
     suite('<carbon-location>', function () {
-      var carbonLocation;
+      var initialUrl;
 
       setup(function() {
-        carbonLocation = fixture('BasicLocation');
+        initialUrl = window.location.href;
       });
 
-      test('it automatically exposes the current route', function() {
-        expect(carbonLocation.route).to.be.ok;
-        expect(carbonLocation.route.path).to.be.equal(window.location.pathname);
+      teardown(function() {
+        window.history.replaceState({}, '', initialUrl);
       });
 
-      suite('manipulating the route', function() {
-        var originalPath;
-        var originalQueryParams;
+      suite('in the default configuration', function() {
+        var carbonLocation;
 
         setup(function() {
-          originalPath = carbonLocation.route.path;
-          originalQueryParams = assign({}, carbonLocation.route.__queryParams);
+          carbonLocation = fixture('BasicLocation');
         });
 
-        teardown(function() {
-          carbonLocation.set('route.prefix', '');
-          carbonLocation.set('route.path', originalPath);
-          carbonLocation.set('route.__queryParams', originalQueryParams);
+        test('it automatically exposes the current route', function() {
+          expect(carbonLocation.route).to.be.ok;
+          expect(carbonLocation.route.path).to.be.equal(window.location.pathname);
         });
 
-        test('it reflects path to location.pathname', function() {
-          carbonLocation.set('route.path', '/foo/bar');
-          expect(window.location.pathname).to.be.equal('/foo/bar');
+        suite('manipulating the route', function() {
+          var originalPath;
+          var originalQueryParams;
+
+          setup(function() {
+            originalPath = carbonLocation.route.path;
+            originalQueryParams = assign({}, carbonLocation.route.__queryParams);
+          });
+
+          teardown(function() {
+            carbonLocation.set('route.prefix', '');
+            carbonLocation.set('route.path', originalPath);
+            carbonLocation.set('route.__queryParams', originalQueryParams);
+          });
+
+          test('it reflects path to location.pathname', function() {
+            carbonLocation.set('route.path', '/foo/bar');
+            expect(window.location.pathname).to.be.equal('/foo/bar');
+          });
+
+          test('it reflects queryParams values to location.search', function() {
+            carbonLocation.set('route.__queryParams.foo', 1);
+            expect(window.location.search).to.match(/foo=1/);
+          });
+
+          test('it reflects completely replaced queryParams', function() {
+            carbonLocation.set('route.__queryParams', { bar: 1 });
+            expect(window.location.search).to.be.equal('?bar=1');
+          });
+
+          test('it reflects the prefix to location.pathname', function() {
+            carbonLocation.set('route.prefix', '/fiz');
+            expect(window.location.pathname).to.be.equal('/fiz' + originalPath);
+          });
         });
 
-        test('it reflects queryParams values to location.search', function() {
-          carbonLocation.set('route.__queryParams.foo', 1);
-          expect(window.location.search).to.match(/foo=1/);
-        });
+        /**
+         * NOTE: For a more thorough spec describing this behavior, please refer
+         * to the `iron-location` component.
+         */
+        suite('manipulating the history state', function() {
+          var originalLocation;
 
-        test('it reflects completely replaced queryParams', function() {
-          carbonLocation.set('route.__queryParams', { bar: 1 });
-          expect(window.location.search).to.be.equal('?bar=1');
-        });
+          setup(function() {
+            originalLocation = window.location.toString();
+          });
 
-        test('it reflects the prefix to location.pathname', function() {
-          carbonLocation.set('route.prefix', '/fiz');
-          expect(window.location.pathname).to.be.equal('/fiz' + originalPath);
-        });
-      });
+          teardown(function() {
+            setLocation(originalLocation);
+          });
 
-      /**
-       * NOTE: For a more thorough spec describing this behavior, please refer
-       * to the `iron-location` component.
-       */
-      suite('manipulating the history state', function() {
-        var originalLocation;
+          test('it reflects location.pathname to route.path', function() {
+            setLocation('/fiz/buz');
+            expect(carbonLocation.route.path).to.be.equal('/fiz/buz');
+          });
 
-        setup(function() {
-          originalLocation = window.location.toString();
-        });
-
-        teardown(function() {
-          setLocation(originalLocation);
-        });
-
-        test('it reflects location.pathname to route.path', function() {
-          setLocation('/fiz/buz');
-          expect(carbonLocation.route.path).to.be.equal('/fiz/buz');
-        });
-
-        test('it reflects location.search to route.__queryParams', function() {
-          setLocation('?fiz=buz');
-          expect(carbonLocation.route.__queryParams).to.be.eql({
-            fiz: 'buz'
+          test('it reflects location.search to route.__queryParams', function() {
+            setLocation('?fiz=buz');
+            expect(carbonLocation.route.__queryParams).to.be.eql({
+              fiz: 'buz'
+            });
           });
         });
       });
 
-      suite('manipulating the urlSpace', function() {
-        var pageUrl;
-        var originalLocation;
+      suite('using the hash as the route path', function() {
+        var carbonLocation;
 
         setup(function() {
-          pageUrl = carbonLocation.$$('iron-location');
-          originalLocation = window.location.toString();
+          carbonLocation = fixture('LocationViaHash');
         });
 
-        teardown(function() {
-          setLocation(originalLocation);
+        test('it reflects location.hash to route.path', function() {
+          setLocation('#/fiz/buz');
+          expect(carbonLocation.route.path).to.be.equal('/fiz/buz');
         });
 
-        test('changing the urlSpace pattern and testing paths', function() {
-          setLocationClick('/test');
-
-          carbonLocation.urlSpaceRegex = '/foo';
-
-          expect(carbonLocation.route.path).to.be.equal('/test');
-
-          setLocationClick('/foo');
-          expect(carbonLocation.route.path).to.be.equal('/foo');
-
-          setLocationClick('/foo/bar');
-          expect(carbonLocation.route.path).to.be.equal('/foo/bar');
-
-          setLocationClick('/bar');
-          expect(carbonLocation.route.path).to.be.equal('/foo/bar');
-
-          carbonLocation.urlSpaceRegex = '/foo/[0-9]+';
-
-          setLocationClick('/foo/123');
-          expect(carbonLocation.route.path).to.be.equal('/foo/123');
-
-          setLocationClick('/foo/');
-          expect(carbonLocation.route.path).to.be.equal('/foo/123');
-
-          setLocationClick('/foo/456');
-          expect(carbonLocation.route.path).to.be.equal('/foo/456');
+        test('it reflects route.path to location.hash', function() {
+          carbonLocation.set('route.path', '/foo/bar');
+          expect(window.location.hash).to.be.equal('#/foo/bar');
         });
-      });
-    });
-
-    suite('using the hash as the route path', function() {
-      var carbonLocation;
-      var originalLocation;
-
-      setup(function() {
-        originalLocation = window.location.toString();
-      });
-
-      teardown(function() {
-        setLocation(originalLocation);
-      });
-
-      setup(function() {
-        carbonLocation = fixture('LocationViaHash');
-      });
-
-      test('it reflects location.hash to route.path', function() {
-        setLocation('#/fiz/buz');
-        expect(carbonLocation.route.path).to.be.equal('/fiz/buz');
-      });
-
-      test('it reflects route.path to location.hash', function() {
-        carbonLocation.set('route.path', '/foo/bar');
-        expect(window.location.hash).to.be.equal('#/foo/bar');
       });
     });
   </script>
