--- a/lib/carbon-route/test/test-app-example-1.html
+++ b/lib/carbon-route/test/test-app-example-1.html
@@ -37,12 +37,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     var exampleApp;
 
     setup(function() {
-      originalLocation = window.location.toString();
+      originalLocation = window.location.href;
       exampleApp = fixture('ExampleApp');
     });
 
     teardown(function() {
-      setLocation(originalLocation);
+      window.history.replaceState({}, '', originalLocation);
     });
 
     test('runs through basic usage', function() {
@@ -64,22 +64,27 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         path: null,
         __queryParams: {}
       });
+      expect(window.location.pathname).to.be.equal('/lol');
 
       // Navigate to /user
       setLocation('/user');
       expect(exampleApp.data).to.be.deep.eq({
         page: 'user'
       });
+
+      // We should have redirected to /user/view because of a redirect in
+      // the example app code.
       expect(exampleApp.route).to.be.deep.eq({
         prefix: '',
-        path: '/user',
+        path: '/user/view',
         __queryParams: {}
       });
       expect(exampleApp.userRoute).to.be.deep.eq({
         prefix: '/user',
-        path: '',
+        path: '/view',
         __queryParams: {}
       });
+      expect(window.location.pathname).to.be.equal('/user/view');
 
       // Navigate to /user/details
       setLocation('/user/details');
@@ -99,6 +104,14 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         path: '/details',
         __queryParams: {}
       });
+      expect(window.location.pathname).to.be.equal('/user/details');
+
+      exampleApp.set('data.page', 'redirectToUser');
+      expect(window.location.pathname).to.be.equal('/user/view');
+
+      // This triggers two redirects in a row!
+      setLocation('/redirectToUser');
+      expect(window.location.pathname).to.be.equal('/user/view');
 
       // Data binding changes to a different user subpage.
       exampleApp.set('userData.page', 'profile');
